prevent wrapping

--- a/css/main.styl
+++ b/css/main.styl
@@ -62,7 +62,7 @@ input, button
   font-size: 16px
 
 input[name=torrentId]
-  width: 400px
+  width: 300px
 
 .log, .speed
   font-family: monospace
